<resources>
    <string name="app_name">Appic</string>
    <string name="open_filter">Open Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="account_number">Acc : %d</string>
    <string name="brand_count">Brand: %d</string>
    <string name="location_count">Location: %d</string>
    <string name="selection_account_number">Select Account Number</string>
    <string name="select_brand">Selection Brand</string>
    <string name="select_location">Select Location</string>
    <string name="add_to_filter">Add To Filter</string>
    <string name="search">Search</string>
    <string name="no_result_found">No result found!</string>
</resources>