<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SelectBrandActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        style="@style/Text14spRegularPrimary"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="@dimen/app_item_padding"
        android:background="@drawable/search_view_background"
        android:inputType="text"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:defaultQueryHint="@string/search"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/search" />

    <TextView
        android:id="@+id/select_all"
        style="@style/Text14spMediumPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_item_padding"
        android:text="@string/select_all"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <TextView
        android:id="@+id/clear"
        style="@style/Text14spMediumPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_item_padding"
        android:text="@string/clear"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/select_all"
        app:layout_constraintTop_toTopOf="@id/select_all" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/brand_name_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/apply_filter_btn"
        app:layout_constraintTop_toBottomOf="@id/select_all" />

    <Button
        android:id="@+id/apply_filter_btn"
        style="@style/MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_filter"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>